crates/ridge-lower/tests/snapshots/lowering__lambda_tuple_param.snap
---
source: crates/ridge-lower/tests/lowering.rs
expression: rendered
---
module: m0
items_count: 2
items:
  - kind: fn
    name: sum_pairs
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(6) [Con(0)]
    params:
      - name: pairs
        ty: Con(6) [Type]
    body:
      Call(n0):
        callee:
          Symbol(n1): Stdlib(fn:std.list.map)
        args:
          -
            Lambda(n2):
              caps: CapabilitySet(0)
              params:
                - name: __tuple_param_0
                  ty: Type
              body:
                Match(n3):
                  scrutinee:
                    Local(n4): __tuple_param_0
                  arms:
                    -
                      pat:
                        Tuple:
                          Bind: a
                          Bind: b
                      body:
                        Call(n5):
                          callee:
                            Symbol(n6): Stdlib(fn:std.int.add)
                          args:
                            -
                              Local(n7): a
                            -
                              Local(n8): b
          -
            Local(n9): pairs
  - kind: fn
    name: first_of_triple
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(6) [Con(0)]
    params:
      - name: triples
        ty: Con(6) [Type]
    body:
      Call(n10):
        callee:
          Symbol(n11): Stdlib(fn:std.list.map)
        args:
          -
            Lambda(n12):
              caps: CapabilitySet(0)
              params:
                - name: __tuple_param_1
                  ty: Type
              body:
                Match(n13):
                  scrutinee:
                    Local(n14): __tuple_param_1
                  arms:
                    -
                      pat:
                        Tuple:
                          Bind: x
                          Wild
                          Wild
                      body:
                        Local(n15): x
          -
            Local(n16): triples
