crates/ridge-lower/tests/snapshots/lowering__pipe_simple.snap
---
source: crates/ridge-lower/tests/lowering.rs
expression: rendered
---
module: m0
items_count: 3
items:
  - kind: fn
    name: add1
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(0)
    params:
      - name: x
        ty: Con(0)
    body:
      Call(n0):
        callee:
          Symbol(n1): Stdlib(fn:std.int.add)
        args:
          -
            Local(n2): x
          -
            Lit(n3): Int(1)
  - kind: fn
    name: double
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(0)
    params:
      - name: x
        ty: Con(0)
    body:
      Call(n4):
        callee:
          Symbol(n5): Stdlib(fn:std.int.mul)
        args:
          -
            Local(n6): x
          -
            Lit(n7): Int(2)
  - kind: fn
    name: pipe_simple
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(0)
    params:
      - name: x
        ty: Con(0)
    body:
      Call(n8):
        callee:
          Symbol(n9): Local(add1 @ m0)
        args:
          -
            Local(n10): x
