crates/ridge-lower/tests/snapshots/lowering__try_block_basic.snap
---
source: crates/ridge-lower/tests/lowering.rs
expression: rendered
---
module: m0
items_count: 1
items:
  - kind: fn
    name: parse_int
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(9) [Con(0)]
    params:
      - name: s
        ty: Con(3)
    body:
      Symbol(n0): Prelude(None)
